--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "typescript": "^4.4.4",
     "web-vitals": "^1.0.1"
   },
+  "main": "lib/index.js",
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
